public/application.css
/* 720 x 1280 */
#root {
    height: 605px;
    width: 355px;
    overflow-y: scroll;
    border-radius: 5px;
    border: 1px solid black;
    position: absolute;
    top: 110px;
    left: 39px;
    z-index: 20;
    background: white;
}

html {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 20px;
}

body {
    font-family: 'Open Sans';
    cursor: pointer;
    position: relative;
}

body > img {
    height: 833px;
}


.session-form {
    display: flex;
    flex-direction: column;
    height: 100%;
}

.logo > img {
    width: 80%;
}

.session-form .form, .mentor-index .title {
    padding-left: 10%;
    padding-right: 10%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
}

.session-form .header {
    font-weight: bold;
    font-size: 129%;
}

#email-input, #password-input {
    height: 30px;
    border: 1px solid gray;
    border-radius: 5%;
    width: 290px;
    padding-left: 10px;
    color: gray;
    font-family: 'Open Sans';
    display: flex;
    align-items: center;
    font-size: 12px;
}

.session-form .form p, span, .fa-eye {
    font-size: 12px;
    margin: 8px 0;
    font-weight: 100;
    color: gray;
}

.fa-eye {
     margin-right: 5px;
}

.password-show {
    display: flex;
    justify-content: space-between;
}

.button {
    background: #4C90E2;
    color: white;
    width: 90%;
    height: 50px;
    margin-top: 20px;
    border-radius: 5px;
    display: flex;
    align-items: center;
    padding-left: 20px;
    padding-right: 20px;
    font-size: 15px;
    justify-content: space-between;
}

.forgot-password {
    margin-top: 8px;
    color: #4C90E2;
    font-size: 12px;
    font-weight: 100;
}

footer {
    margin-top: 10.5%;
    display: flex;
    align-self: flex-end;
}

footer > img {
    align-self: flex-end;
    width: 360px;
}

.blue {
    background: #2a9fd8;
    opacity: 30%;
    width: max-content;
    color: white !important;
}

.mentor-index {
    margin-top: 10px;
    position: relative;
    overflow-y: auto; 
}

.mentor-index .title {
    font-weight: bolder;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    border-bottom: 1px solid lightgray;
    padding-bottom: 10px;
    color: gray;
}

.mentor-index .title img {
    width: 45px;
    height: 45px;
    border-radius: 50%;
}

.upcoming-event {
    margin-top: 20px;
    display: flex;
    justify-content: center;
}

.event-box {
    color: white;
    border-radius: 5px;
    background: #4A90E2;
    width: 80%;
    display: flex;
    flex-direction: row;
}

.left-section {
    display: flex;
    justify-content: center;
    align-items: center;
    border-right: 1.5px solid white;
    font-size: 20px;
    width: 10%;
    padding: 20px;
    text-align: center;
    
}

.right-section {
    padding: 10px;
    font-size: 12px;
    font-weight: bold;
}

.right-section > p {
    margin: 0;
}

.right-section > h4 {
    margin-top: 5px;
    font-size: 15px;
    font-weight: normal;
    margin-bottom: 5px;
}

.fa-clock {
    margin-right: 5px;
}

.action-row {
    margin-top: 10px;
    font-size: 14px;
    font-weight: normal;
}

.fa-undo {
    margin-right: 5px;
}

.fa-times {
    margin-left: 30px;
    margin-right: 5px;
}

.navbar {
    display: flex;
    border-top: 4px solid #EAEAEA;
    /* position: absolute; */
}

.navbar > ul {
    margin-top: 5px;
    color: gray;
    display: flex;
    list-style: none;
    flex-direction: row;
    justify-content: space-evenly;
    text-align: center;
    font-size: 13px;
    padding: 10px;
}
.chat, .appointment {
    position: relative;
}

.fa-circle {
    color: red;
    font-size: 5px;
    position: absolute;
    margin-left: 2px;
}

.slider {
    display: flex;
    align-items: center;
}

.slider-parent {
    display: flex;
    flex-direction: column;
}

.active-sessions {
    margin-top: 20px;
}

.active-sessions > p, .mentors-list-section > p {
    padding-left: 30px;
}

.active-sessions-carousel {
    display: flex;
    justify-content: center;
    width: 100%;
}

.active-session-li {
    list-style: none;
    width: 85%;
    border-radius: 5px;
    box-shadow: 0px 0px 10px 10px #F7F7F7;
    position: relative;
    padding: 10px 20px;
    margin-top: 55px;
    
}

.active-session-li img {
    position: absolute;
    width: 90px;
    border-radius: 50%;
    top: -25%;
    left: 8%;
}

.profile {
    display: flex;
    justify-content: flex-end;
    padding-right: 10px;
    padding-top: 10px;
}

.fa-comment {
    color: gray;
    font-size: 19px;
}

.name {
    color: #5E9CD1;
    font-size: 19px;
    font-weight: bold;
}

.occupation, .location, .last-session {
    color: gray;
    font-size: 16px;
}

.last-session > p {
    font-size: 13px;
    color: #D9D9D9;
    font-weight: bold;
}

.create {
    background: #4A90E2;
    padding: 15px;
    color: white;
    border-radius: 5px;
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 14px;
}

.fa-arrow-right {
    margin-left: 30px;
}

.slide-arrow {
    z-index: 11;
    color: gray;
    margin-left: 10px;
    margin-right: 10px;
}

.indicator {
    margin-top: 10px;
    display: flex;
    flex-direction: row;
    justify-content: center;

}

.indicator > li {
    list-style: none;
    margin-right: 5px;
}

.indicator-circle {
    background: #4A90E2;
    width: 6px;
    height: 6px;
    border-radius: 50%;
}

.selected{
    width: 50px;
    border-radius: 20%;
}

.mentors-carousel {
    list-style: none;
    display: flex;
    flex-direction: row;
    overflow: hidden;
    width: 1000px;
    padding-left: 30px;
}

.mentor-li {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    border-radius: 5px;
    box-shadow: 0px 0px 10px 10px #F7F7F7;
    width: 80px;
    height: 80px;
    margin-left: 10px;
    margin-right: 10px;
}

.mentor-li > img {
    width: 40px;
    border-radius: 50%;
}

.mentor-profile {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 20px;
    /* overflow-y: scroll; */
}

.header-bar {
    background: #4A90E2;
    color: white;
    padding: 4% 10%;  
    width: 80%;
}

.profile-section {
    margin-top: 130px;
    position: relative;
    border-radius: 5px;
    box-shadow: 0px 0px 10px 10px #F7F7F7;
    width: 90%;   
    display: flex;
    flex-direction: column;
    align-items: center;
}

.profile-section > img {
    width: 150px;
    height: 150px;
    border-radius: 50%;
    position: absolute;
    top: -90px;
    /* left: 100px; */
}

.profile-name {
    margin-top: 45px;
    color: #4A90E2;
    /* margin-bottom: 0; */
}

.profile-name > h3 {
    margin-bottom: 0;
}

.profile-occupation {
    margin-top: 5px;
}

.profile-occupation, .profile-location {
    color: gray;
    font-size: 13px;
}

.profile-action {
    color: gray;
    display: flex;
    flex-direction: row;
}

.profile-action > div {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 10px;
    margin-bottom: 20px;
    font-size: 12px;
}

.profile-action > div > div {
    font-size: 15px;
    margin-right: 20px;
    margin-left: 20px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #F3F3F3;
    border-radius: 50%;
    width: 40px;
    height: 40px;
}

.user-detail {
    margin-top: 10px;
    box-shadow: 0px 0px 10px 10px #F7F7F7;
    padding: 20px;
    width: 80%;
    font-size: 14px;
    color: gray;
}

.user-detail h4 {
    margin-bottom: 5px;
}

.skills-ul {
    /* list-style: none; */
    display: flex;
    flex-wrap: wrap;
    padding-left: 0;
}

.skill-li {
    background: #FAFAFA;
    border-radius: 100px;
    margin: 5px;
    padding: 10px 15px;
    border: 1px solid lightgray;
    font-size: 12px;
}

.occupation-ul, .education-ul {
    list-style: none;
    padding-left: 0;
}

.job-li, .education-li {
    /* border: 1px solid lightgray; */
    display: flex;
    flex-direction: row;
    margin-bottom: 10px;
}

.work-logo {
    background: #4A90E2;
    color: white;
    padding: 10px;
    width: 19px;
    height: 19px;
    text-align: center;
    border-radius: 5px;
    margin-right: 15px;
}

.education-logo {
    margin-right: 12px;
}

.education-logo > img {
    width: 45px;
    height: 30px;
}

.job-li h5, .education-detail h5 {
    margin: 0;
}

.job-li p, .education-detail p {
    font-size: 11px;
    margin: 5px;
    margin-left: 0;
}

.fa-building {
    margin-right: 5px;
}

.blue-text {
    color: #4A90E2;
}

